--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - checkout
       - python/install-packages:
-          pkg-manager: pip-
+          pkg-manager: pip-dist
           packages:
             - pygobject
       - run:
