--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,13 @@ jobs:
             apt-get update && apt-get install -y \
               libcairo2-dev \
               pkg-config \
+              gstreamer1.0-tools \
+              gir1.2-gstreamer-1.0 \
+              gir1.2-gst-plugins-base-1.0 \
+              gstreamer1.0-plugins-good \
+              gstreamer1.0-plugins-ugly \
+              gstreamer1.0-plugins-bad \
+              gstreamer1.0-libav \
             && rm -rf /var/lib/apt/lists/*
       - run:
           name: Install packages
