--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,12 @@ jobs:
     steps:
       - checkout
       - run:
+        name: Fix apt lists directory permissions
+        command: |
+          sudo mkdir -p /var/lib/apt/lists/partial
+          sudo chown -R _apt:_apt /var/lib/apt/lists
+          sudo chmod 755 /var/lib/apt/lists
+      - run:
           name: Install system dependencies
           command: |
             apt-get update && apt-get install -y \
@@ -21,6 +27,7 @@ jobs:
               gstreamer1.0-plugins-ugly \
               gstreamer1.0-plugins-bad \
               gstreamer1.0-libav \
+            && rm -rf /var/lib/apt/lists/*
       - run:
           name: Install packages
           command: pip install pygobject PyObjC
