--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - run:
           name: Install system dependencies
           command: |
-            apt-get update && apt-get install -y \
+            sudo apt-get update && apt-get install -y \
               libcairo2-dev \
               pkg-config \
               gstreamer1.0-tools \
