--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
   test-python:
     # Install dependencies and run tests
     docker:
-      - image: cimg/python:3.8-node
+      - image: cimg/python:3.8-windows
     steps:
       - checkout
       - run:
@@ -14,7 +14,7 @@ jobs:
   build-package:
     # build python package
     docker:
-      - image: cimg/python:3.8-node
+      - image: cimg/python:3.8-windows
     steps:
       - checkout
       - run:
@@ -26,7 +26,7 @@ jobs:
           destination: ~/artifacts
   deploy:
     docker:
-      - image: cimg/base:stable
+      - image: circleci/windows@2.2.0
     steps:
       - run:
           name: deploy
