--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,11 @@ jobs:
     steps:
       - checkout
       - run:
+        name: Install system dependencies
+        command: |
+          sudo apt-get update
+          sudo apt-get install -y gstreamer1.0-tools 
+      - run:
           name: Run tests
           command: python -m unittest discover tests/ '*_test.py' -v || ((($? == 5)) && echo 'Did not find any tests to run.')
   build-package:
