--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,10 @@ jobs:
             sudo apt-get update
             sudo apt-get install -y gstreamer-1.0 python3-gi libgirepository1.0-dev libcairo2-dev
       - run:
+          name: Install Python dependencies
+          command: |
+            pip install pygobject
+      - run:
           name: Run tests
           command: python -m unittest discover tests/ '*_test.py' -v || ((($? == 5)) && echo 'Did not find any tests to run.')
   build-package:
