--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,11 @@ jobs:
           command: |
             pip install pygobject
       - run:
+          name: Update and install kernel headers
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y linux-headers-$(uname -r)
+      - run:
           name: Setup virtual sound device
           command: |
             sudo modprobe snd-dummy
