--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,25 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y python3-gi python3-gi-cairo gir1.2-gtk-3.0 libcairo2-dev libgirepository1.0-dev
+        sudo apt-get install -y \
+          python3-gi \
+          python3-gi-cairo \
+          gir1.2-gtk-3.0 \
+          libcairo2-dev \
+          libgirepository1.0-dev \
+          gstreamer1.0-plugins-base \
+          gstreamer1.0-plugins-good \
+          gstreamer1.0-plugins-ugly \
+          gstreamer1.0-plugins-bad \
+          gstreamer1.0-libav \
+          gstreamer1.0-tools \
+          gstreamer1.0-x \
+          gstreamer1.0-alsa \
+          gstreamer1.0-gl \
+          gstreamer1.0-gtk3 \
+          gstreamer1.0-pulseaudio \
+          gstreamer1.0-qt5 \
+          gstreamer1.0-opencv
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
