forgot to add a slash!

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -45,7 +45,7 @@ jobs:
           gstreamer1.0-gtk3 \
           gstreamer1.0-pulseaudio \
           gstreamer1.0-qt5 \
-          gstreamer1.0-opencv
+          gstreamer1.0-opencv \
           python3-gst-1.0
     - name: Install Python dependencies
       run: |
